-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.5.0
-
None
-
3
-
9707
This bug is easy to reproduce in the following steps:
1)mkfs.lustre a stand-alone MGS
2)tunefs.lustre that MGS
Here is my output,
[root@centos6-3 master]# lustre/utils/mkfs.lustre --mgs --device-size=100000 --reformat /tmp/lustre-mgs
Permanent disk data:
Target: MGS
Index: unassigned
Lustre FS:
Mount type: ldiskfs
Flags: 0x64
(MGS first_time update )
Persistent mount opts: user_xattr,errors=remount-ro
Parameters:
formatting backing filesystem ldiskfs on /dev/loop0
target name MGS
4k blocks 25000
options -q -O uninit_bg,dir_nlink,quota,huge_file,flex_bg -E lazy_journal_init -F
mkfs_cmd = mke2fs -j -b 4096 -L MGS -q -O uninit_bg,dir_nlink,quota,huge_file,flex_bg -E lazy_journal_init -F /dev/loop0 25000
Writing CONFIGS/mountdata
[root@centos6-3 master]# tunefs.lustre --erase-params /tmp/lustre-mgs
checking for existing Lustre data: found
Reading CONFIGS/mountdata
Read previous values:
Target: MGS
Index: unassigned
Lustre FS:
Mount type: ldiskfs
Flags: 0x44
(MGS update )
Persistent mount opts: user_xattr,errors=remount-ro
Parameters:
tunefs.lustre: '----index' only valid for MDT,OST
tunefs.lustre v2.4.90
usage: tunefs.lustre <target type> [--backfstype=ldiskfs] --fsname=<filesystem name>
--index=<target index> [options] <device>
<device>:block device or file (e.g /dev/sda or /tmp/ost1)
target types:
--mgs: configuration management service
--mdt: metadata storage, mutually exclusive with ost
--ost: object storage, mutually exclusive with mdt, mgs
options (in order of popularity):
--index=#N: numerical target index (0..N)
required for all targets other than the MGS
--fsname=<8_char_filesystem_name>: fs targets belong to
required for all targets other than MGS
--mgsnode=<nid>[,<...>]: NID(s) of remote MGS
required for all targets other than MGS
--mountfsoptions=<opts>: permanent mount options
--failnode=<nid>[,<...>]: NID(s) of backup failover node
mutually exclusive with --servicenode
--servicenode=<nid>[,<...>]: NID(s) of service partners
treat nodes as equal service node, mutually exclusive with --failnode
--param <key>=<value>: set a permanent parameter
e.g. --param sys.timeout=40
--param lov.stripesize=2M
--network=<net>[,<...>]: restrict OST/MDT to network(s)
--erase-params: erase all old parameter settings
--nomgs: turn off MGS service on this MDT
--writeconf: erase all config logs for this fs.
--quota: enable space accounting on old 2.x device.
--comment=<user comment>: arbitrary string (824 bytes)
--dryrun: report what we would do; don't write to disk
--verbose: e.g. show mkfs progress
--quiet
I will fix it.
- is related to
-
LU-3682 "tunefs.lustre --erase_params" corrupts running MGS when run against device node symlink
-
- Reopened
-