LU-3768 tunefs: make tunefs.lustre work correctly for MGS

Since LDD_F_NEED_INDEX flag is unset for a stand-alone MGS, when
running tunefs.lustre on that MGS, it always says "'----index'
only valid for MDT,OST". To fix that, this patch is to
 -remove LDD_F_NEED_INDEX flag from set_defaults(), since this flag
  is unset finally no matter for MDT/OST or MGS. And this way  will
  make code easy to understand.
 -fix the typo '----index' in the error message.

Signed-off-by: Liu Ying <emoly.liu@intel.com>
Change-Id: I4fa00dc554521c03671602ff9b2bbaca02c6a581